# python_call_cpp

./: .gitignore  CMakeLists.txt  README.md
src/: src_add.cpp
test_python/: test.py
